add UpdateComment
