# handler/comments.go
@@ -72,37 +72,46 @@ func CreateComment(c echo.Context) error {
 	return c.JSON(http.StatusCreated, comment)
 }
 
-// func UpdateSpot(c echo.Context) error {
-// 	spot := new(Spot)
+func UpdateComment(c echo.Context) error {
+	comment := new(Comment)
 
-// 	userID, _ := strconv.ParseInt(c.Param("user_id"), 10, 64)
-// 	if userID == 0 {
-// 		return c.JSON(http.StatusBadRequest, "user ID is required")
-// 	}
+	userID, _ := strconv.ParseInt(c.Param("user_id"), 10, 64)
+	if userID == 0 {
+		return c.JSON(http.StatusBadRequest, "user ID is required")
+	}
 
-// 	spotID := c.Param("spot_id")
-// 	if spotID == "" {
-// 		return c.JSON(http.StatusBadRequest, "spot ID is required")
-// 	}
+	recordID, _ := strconv.ParseInt(c.Param("record_id"), 10, 64)
+	if recordID == 0 {
+		return c.JSON(http.StatusBadRequest, "record ID is required")
+	}
 
-// 	if err := DB.First(&spot, spotID).Error; err != nil {
-// 		return c.JSON(http.StatusBadRequest, err.Error())
-// 	}
+	commentID := c.Param("comment_id")
+	if commentID == "" {
+		return c.JSON(http.StatusBadRequest, "comment ID is required")
+	}
 
-// 	if spot.UserID != userID {
-// 		return c.JSON(http.StatusBadRequest, "user and spot do not match")
-// 	}
+	if err := DB.First(&comment, commentID).Error; err != nil {
+		return c.JSON(http.StatusBadRequest, err.Error())
+	}
 
-// 	if err := c.Bind(&spot); err != nil {
-// 		return c.JSON(http.StatusBadRequest, err.Error())
-// 	}
+	if comment.UserID != userID {
+		return c.JSON(http.StatusBadRequest, "user and comment do not match")
+	}
 
-// 	if err := DB.Model(&spot).Where("id=?", spot.ID).Updates(&spot).Error; err != nil {
-// 		return c.JSON(http.StatusBadRequest, err.Error())
-// 	}
+	if comment.RecordID != recordID {
+		return c.JSON(http.StatusBadRequest, "record and comment do not match")
+	}
 
-// 	return c.JSON(http.StatusCreated, spot)
-// }
+	if err := c.Bind(&comment); err != nil {
+		return c.JSON(http.StatusBadRequest, err.Error())
+	}
+
+	if err := DB.Model(&comment).Where("id=?", comment.ID).Updates(&comment).Error; err != nil {
+		return c.JSON(http.StatusBadRequest, err.Error())
+	}
+
+	return c.JSON(http.StatusCreated, comment)
+}
 
 // func DeleteSpot(c echo.Context) error {
 // 	spot := new(Spot)
