# router/router.go
@@ -28,6 +28,7 @@ func NewRouter() *echo.Echo {
 	e.GET("/api/users/:user_id/comments", handler.GetUserComments)
 	e.GET("/api/records/:record_id/comments", handler.GetRecordComments)
 	e.POST("/api/users/:user_id/records/:record_id/comments", handler.CreateComment)
+	e.PATCH("/api/users/:user_id/records/:record_id/comments/:comment_id", handler.UpdateComment)
 
 	return e
 }
